--- a/backend/frontend/src/styles/StarRating.css
+++ b/backend/frontend/src/styles/StarRating.css
@@ -11,8 +11,7 @@
   user-select: none;
 }
 
-.star:hover,
-.star.active {
+.star:hover, .star.active {
   transform: scale(1.1);
 }
 
@@ -25,16 +24,7 @@
   color: #e5e7eb;
 }
 
-.star-rating:hover .star {
-  color: #e5e7eb;
-}
-
-.star-rating .star:hover ~ .star {
-  color: #e5e7eb;
-}
-
-.star:hover,
-.star:hover ~ .star {
+.star:hover, .star:hover ~ .star {
   transform: scale(1.1);
 }
 
